Update surefire plugin config.